added filter check box

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         />
         <button type="submit">Add item</button>
       </form>
+      <label for="filter_checkbox"></label>
+      <input id="filter_checkbox" type="checkbox" /> Un-checked items only<br />
       <ul class="shopping-list js-shopping-list"></ul>
     </div>
     <script
